--- a/kata_18_java/build.xml
+++ b/kata_18_java/build.xml
@@ -11,7 +11,7 @@
     <mkdir dir="target/junit-report"/>
     <taskdef name="cucumber" classname="cuke4duke.ant.CucumberTask" classpathref="compile.classpath"/>
     <cucumber
-            args="--verbose --require target/test-classes --require src/test/ruby --color --format pretty" objectFactory="pico">
+            args="--verbose --require target/test-classes --require test/ruby --color --format pretty test/ruby/features" objectFactory="pico">
       <classpath>
         <pathelement location="target/test-classes"/>
       </classpath>
@@ -25,6 +25,7 @@
   <target name="-install-gems" depends="-define-paths" if="gems">
     <taskdef name="gem" classname="cuke4duke.ant.GemTask" classpathref="compile.classpath"/>
     <gem args="install cuke4duke --version 0.4.3"/>
+    <gem args="install rspec --version 1.3.0"/>
   </target>
 
   <target name="-define-paths" depends="-download-jars">
